--- a/lab/tec/dt/earthcal.html
+++ b/lab/tec/dt/earthcal.html
@@ -41,7 +41,7 @@ a:active {
 
 <div class="centered" style="width: 60%; margin: 0 auto; margin-top: -80px; font-size: 30px;">
 
-<i><a href="../index.htm">The Earth Calendar</a></i> was born with the rise of the Internet, when everyone had the tools to start changing the world. This calendar places 1969 of the Old Era as Year Zero of the new one. Conceived for human needs, it was later found to be in perfect agreement with the time measured by computers and machines. <i><a href="../index.htm">The Earth Calendar</a></i> is a proven interface for humans with the new time of the Robots.
+<i><a href="../index.htm">The Earth Calendar</a></i> was born with the rise of the Internet, when everyone had the tools to start changing the world. This calendar places 1969 of the Old Era as Year Zero of the new one. Conceived for human needs, it was later found to be in perfect agreement with the time measured by computers and machines. <i><a href="../index.htm">The Earth Calendar</a></i> is a proven interface for humans with the new time of the synthetics.
 
 <br><br>
 
@@ -49,7 +49,7 @@ a:active {
 
 <a href="../ebook.pdf">the e-book</a>
 <span style="margin-right: 48px;"></span> 
-<a href="../index.htm">the historic, original site</a>
+<a href="../index.htm">the historic site</a>
 <span style="margin-right: 48px;"></span> 
 <a href="../50_en.pdf">sample almanac</a> 
 
