--- a/lab/tec/dt/index.html
+++ b/lab/tec/dt/index.html
@@ -52,7 +52,7 @@ a:active {
 
 </a>
 
-<div style="font-size: 26px;">A Proven Interface for Epoch Time</div>
+<div style="font-size: 26px;">A Human-Readable Interface for Unix Epoch Time</div>
 
 </div>
 
@@ -86,9 +86,9 @@ This is the <a href="new_era.html">New Terrestrial Era</a>, <a href="septennia.h
 
 <div style="font-size: 32px;">
 
-<a href="epoch.html" target="" title="Epoch Time">
+<a href="epoch.html" target="" title="Unix Epoch Time">
 
-<strong>__ Epoch Time: <span id="epoch"></span> __</strong>
+<strong>__ Unix Epoch Time: <span id="epoch"></span> __</strong>
 
 </a>
 
@@ -96,7 +96,7 @@ This is the <a href="new_era.html">New Terrestrial Era</a>, <a href="septennia.h
 
 <br><br><br><br>
 
-<i><a href="../legal.htm">Copyright and trademark</a> <a href="../../eulab/index.htm">Laboratorio Eudemonia</a><br>Created by <a href="../../index.html">HyperLinker</a> - <a href="mailto:info@hyperlinker.org">Contact</a> - <a href="../agenda/index.html">Agenda</a> and <a href="api.html">APIs</a> (man at work)</i>
+<i><a href="../legal.htm" target="ct">Copyright and trademarks</a> © <a href="../../eulab/index.htm" target="eu">Laboratorio Eudemonia</a> - <a href="../license_1.htm" target="lc">released under a free-use license</a><br>Web implementation by <a href="../../index.html" target="hl">HyperLinker</a> - <a href="mailto:earthcal@hyperlinker.org">contact</a> - <a href="../agenda/index.html" target="ag">Agenda</a>, <a href="api.html" target="ap">APIs</a> and <a href="https://github.com/hl-eulab/tec/" target="rp">repo</a> (work in progress)</i>
 
 </div>
 
