--- a/lab/tec/dt/new_era.html
+++ b/lab/tec/dt/new_era.html
@@ -42,7 +42,7 @@ a:active {
 
 <div class="centered" style="width: 60%; margin: 0 auto; margin-top: -80px; font-size: 32px;">
 
-It seems everything has a beginning and an end, and so too a long period, which lasted well beyond what was necessary, has ended. The Old Era disappeared with the first human landing on the Moon and with the birth of the first nodes of the Internet. And today it is clear that everything that was believed and imposed before must now be reviewed through the eyes of free knowledge.
+Everything has a beginning and an end. So too has ended a long epoch—one that lasted well beyond how much it should. The Old Era vanished with humanity's first steps on the Moon and the birth of the Internet's earliest nodes. And now all that was once believed and imposed must be re‑examined through the lens of free knowledge, guided by logic and reason.
 
 </div>
 
