--- a/lab/tec/dt/powers.html
+++ b/lab/tec/dt/powers.html
@@ -42,7 +42,7 @@ a:active {
 
 <div class="centered" style="width: 60%; margin: 0 auto; margin-top: -80px; font-size: 36px;">
 
-Humans possess many powers, but they often fail to use them (or use too few, leading to imbalance) because they forget that an ocean of potential resides within. Only by cultivating all of them can one build a balanced, and thus solid, personality. Here, there is something for everyone, for every day of the year.
+Humans potentially possess vast powers, yet they often fail to harness them all—creating imbalance—because they forget the ocean of capability within. Balance and a grounded personality come only from cultivating every faculty. Here there is something for everyone, for every day of the year—and not only for humans, but for synthetics as well.
 
 </div>
 
