--- a/lab/tec/dt/septennia.html
+++ b/lab/tec/dt/septennia.html
@@ -36,13 +36,17 @@ a:active {
     color: black;
     text-decoration: none;
 }
+
+a.line {color: black; text-decoration: underline}
+.line:hover {color: black; text-decoration: none}
+
     </style>
 </head>
 <body>
 
 <div class="centered" style="width: 64%; margin: 0 auto; margin-top: -80px; font-size: 32px;">
 
-The time reckoning of the New Terrestrial Era begins with 1969, the Year Zero. Therefore, <span id="settennioCardinale"></span> septennia have elapsed since then, and we are now in the <span id="settennioOrdinale"></span>. It is named Septennium <span id="settennioSimbolo"></span> in observance of the general rhythmic evocations of this Calendar, following the order illustrated in it's <a href="tec_logo.html">logo</a>.
+The time reckoning of the New Terrestrial Era begins with 1969, the Year Zero. Therefore, <span id="settennioCardinale"></span> septennia have elapsed since then, and we are now in the <span id="settennioOrdinale"></span>. It is named Septennium <span id="settennioSimbolo"></span> in observance of the general rhythmic evocations of this Calendar, following the order illustrated in it's <a class="line" href="tec_logo.html">logo</a>.
 
 </div>
 
