--- a/lab/tec/licenza_1.htm
+++ b/lab/tec/licenza_1.htm
@@ -106,7 +106,7 @@ Questa licenza è globale ed irrevocabile. Il <i>Laboratorio Eudemonia</i> manti
 
 <br><br><br>
 
-<center><a class="linksign" href="dt/index.html">licenza rilasciata oggi, Lunadì 12, Primo mese, Anno 57, dell'Atomo</a></center>
+<center><i>licenza rilasciata oggi, Lunadì 12, Primo mese, Anno 57, dell'Atomo</i></center>
 
 </div>
 
