--- a/lab/tec/license_1.htm
+++ b/lab/tec/license_1.htm
@@ -99,7 +99,7 @@ This license is global and irrevocable. Laboratorio Eudemonia retains exclusive 
 
 <br><br><br>
 
-<center><i><a class="linksign" href="dt/index.html">license issued today, Moonday 12, First month, Year 57, of the Atom</a></i></center>
+<center><i>license issued today, Moonday 12, first month, Year 57, of the Atom</i></center>
 
 </div>
 
