--- a/lab/tec/dt/index.html
+++ b/lab/tec/dt/index.html
@@ -69,7 +69,7 @@ This is the <a href="new_era.html">New Terrestrial Era</a>, <a href="septennia.h
 <div style="font-size: 36px;">
 
 <span style="font-size: 36px;"><SCRIPT src="tec_date.js"></SCRIPT></span>
-<span style="font-size: 34px;"><SCRIPT src="random_hp.js"></SCRIPT></span>
+<a href='powers.html' title='powers' target=''><span style="font-size: 34px;"><SCRIPT src="random_hp.js"></SCRIPT></span></a>
 
 </div>
 
@@ -96,7 +96,13 @@ This is the <a href="new_era.html">New Terrestrial Era</a>, <a href="septennia.h
 
 <br><br><br><br>
 
-<i><a href="../legal.htm" target="ct">Copyright and trademarks</a> © <a href="../../eulab/index.htm" target="eu">Laboratorio Eudemonia</a> - <a href="../license_1.htm" target="lc">released under a free-use license</a><br>Web implementation by <a href="../../index.html" target="hl">HyperLinker</a> - <a href="mailto:earthcal@hyperlinker.org">contact</a> - <a href="../agenda/index.html" target="ag">Agenda</a>, <a href="api.html" target="ap">APIs</a> and <a href="https://github.com/hl-eulab/tec/" target="rp">repo</a> (work in progress)</i>
+<i><a href="../legal.htm" target="ct">Copyright and trademarks</a> © <a href="../../eulab/index.htm" target="eu">Laboratorio Eudemonia</a> - <a href="../license_1.htm" target="lc">released under a free-use license</a><br>Web implementation by <a href="../../index.html" target="hl">HyperLinker</a> - <a href="mailto:earthcal@hyperlinker.org">contact</a> - <a href="../agenda/index.html" target="ag">Agenda</a> and <a href="https://github.com/hl-eulab/tec/" target="rp">repo</a> (work in progress)</i>
+
+<!--
+
+, <a href="api.html" target="ap">APIs</a>
+
+-->
 
 </div>
 
