--- a/lab/tec/index.htm
+++ b/lab/tec/index.htm
@@ -35,7 +35,14 @@ a.tec_en_2 {font-family: verdana; font-size: 8pt; font-weight: medium; color: wh
 
 <tr><td align="center" valign="bottom" width="60%" height="45%">
 
+<span style="font-size: 12px"><SCRIPT language="JavaScript" src="dt/tec_date.js"></SCRIPT></span>
+<span style="font-size: 12px"><SCRIPT language="JavaScript" src="dt/random_hp.js"></SCRIPT></span>
+
+<!--
+
 <SCRIPT language="JavaScript" src="tec_en_1.js"></SCRIPT>
+
+-->
 
 </td></tr><tr><td align="center" valign="bottom" height="37%">
 
@@ -47,7 +54,7 @@ a.tec_en_2 {font-family: verdana; font-size: 8pt; font-weight: medium; color: wh
 <td align="center" valign="middle"><a href="index_fr.htm"><img src="fr.gif" border="0" width="22pt" alt="Edition Francais"></a></td>
 
 <td align="center" valign="middle">
-<a href="index_it.htm"><img src="it.gif" border="0" width="22pt" alt="Edizione Italiana"></td>
+<a href="index_it.htm"><img src="it.gif" border="0" width="22pt" alt="Edizione Italiana"></a></td>
 
 </tr></table>
 
@@ -56,11 +63,9 @@ a.tec_en_2 {font-family: verdana; font-size: 8pt; font-weight: medium; color: wh
 <FONT face="verdana" SIZE="1"><i>
 <a class="linkhs" HREF="legal.htm">Copyright & Trademarks</a> <a class="linkhs" href="../eulab/index.htm" target="Eudaemony Laboratory">Eudaemony Laboratory</a>. <a class="linkhs" HREF="legal.htm">Some Rights Granted</a><br>
 <a class="linkhs" HREF="story.htm" target="story.htm">WebSite active since</a> <a class="linkhs" HREF="years.htm">28</a> - <a class="linkhs" href="../index.htm" target="HyperLinker">WebWorks by HyperLinker</a>
-</FONT>
+</i></FONT>
 
 </td><td width="100pt"></td></tr></table>
-
-</td></tr></table>
 
 </td></tr></table>
 
