--- a/lab/tec/lines.htm
+++ b/lab/tec/lines.htm
@@ -57,79 +57,44 @@ CODE LINES
 
 <br><br>
 
-Anybody can have on the desktop of her/his own computer and on her/his own web site the short date of <i>The Earth Calendar</i>, as well as it appears below: 
+Anybody can have on the web site the short date of <i>The Earth Calendar</i>, as well as it appears below: 
 
 <br><br><br>
 
 <center>
 
-<script language="JavaScript" src="tec_en_1.js">
-</script>
+<span style="font-size: 14px"><SCRIPT language="JavaScript" src="dt/tec_date.js"></SCRIPT></span>
+<span style="font-size: 14px"><SCRIPT language="JavaScript" src="dt/random_hp.js"></SCRIPT></span>
 
 </center>
 
-<br><br>
+<br><br><br>
 
-You need a special script, here furnished, that is recalled in the HTML code:
-
-<br><br>
-
-<font face="courier new" color="#555555" size="2">
-
-&lt;SCRIPT language="JavaScript" src="tec_en_1.js"&gt;<br>
-&lt;/SCRIPT&gt;
-
-</font>
-
-<br><br>
-
-The stile of the date can be changed by using a <i>style sheet</i> to be inserted in the tag HEAD, just like this below: 
-
-<br><br>
-
-<p align="left">
-
-<font face="courier new" color="#555555" size="2">
-
-&lt;STYLE type="text/css"&gt;
-
-<br><br>
-
-&lt;!--
-
-<br>
-
-a.tec_en_1 {font-family: verdana; font-size: 8pt; font-weight: medium; color: white; background: red; text-decoration: none}
-
-<br>
-
-.tec_en_1:hover {color: black; background: yellow; text-decoration: underline}
-
-<br>
-
---&gt;
-
-<br><br>
-
-&lt;/STYLE&gt;
-
-</font>
-
-</p>
-
-In order to see the date on the desktop of your computer you need to set it in <i>active desktop</i> mode. You can see here a possible <a class="simple" href="desktop_en.htm">result</a>.
-
-<br><br>
-
-In order to get and use the script, you are required to accept and respect all the terms of the agreement reported at the following page:
+You can recall its two scripts in the HTML code:
 
 <br><br><br>
 
-<center><img src="arrow_right.gif"><img src="blank.gif"><a class="procedi" href="scr_license.htm">| proceed |</a><img src="blank.gif"><img src="arrow_left.gif"></center>
+<font face="courier new" color="#555555" size="2">
+
+&lt;SCRIPT language="JavaScript" src="https://hyperlinker.org/tec/dt/tec_date.js"&gt;&lt;/SCRIPT&gt;
+
+<br><br>
+
+&lt;SCRIPT language="JavaScript" src="https://hyperlinker.org/tec/dt/random_hp.js"&gt;&lt;/SCRIPT&gt;
+
+</font>
+
+<br><br><br>
+
+To use the scripts, you must become aware that they are furnished as they are, without any warranty.
+
+<br><br><br><br>
+
+<center><img src="arrow_right.gif"><img src="blank.gif"><a class="procedi" href="scr_license.htm">| LICENSE AGREEMENT |</a><img src="blank.gif"><img src="arrow_left.gif"></center>
 
 </FONT>
 
-<br><br><br>
+<br><br>
 
 <center><FONT face="verdana" SIZE="1">
 
