--- a/lab/tec/lines.htm
+++ b/lab/tec/lines.htm
@@ -90,7 +90,7 @@ To use the scripts, you must become aware that they are furnished as they are, w
 
 <br><br><br><br>
 
-<center><img src="arrow_right.gif"><img src="blank.gif"><a class="procedi" href="scr_license.htm">| LICENSE AGREEMENT |</a><img src="blank.gif"><img src="arrow_left.gif"></center>
+<center><img src="arrow_right.gif"><img src="blank.gif"><a class="procedi" href="legal.htm">| COPY & MARKS |</a><img src="blank.gif"><img src="arrow_left.gif"></center>
 
 </FONT>
 
