--- a/lab/tec/legal.htm
+++ b/lab/tec/legal.htm
@@ -67,7 +67,7 @@ Both personal and commercial use of the name <font color="#82750f"><b><i>The Ear
 
 <br><br><br>
 
-<center><a class="simple" HREF="license_1.htm">LICENSE AGREEMENT</a></center>
+<center><img src="arrow_right.gif"><img src="blank.gif"><a class="line" HREF="license_1.htm"> LICENSE AGREEMENT </a><img src="blank.gif"><img src="arrow_left.gif"></center>
 
 </div>
 
