--- a/lab/index.html
+++ b/lab/index.html
@@ -42,6 +42,7 @@
             'republique.hyperlinker.org': 'https://hyperlinker.org/repubblica/republique.html',
             'vive-la-republique.hyperlinker.org': 'https://hyperlinker.org/repubblica/republique.html',
             'republic.hyperlinker.org': 'https://hyperlinker.org/repubblica/republic.html',
+            'convento.hyperlinker.org': 'https://hyperlinker.org/te/convento/index.html',
         };
         if (redirectMap[hostname]) {
             window.location.replace(redirectMap[hostname]);
