--- a/lab/tec/legale.htm
+++ b/lab/tec/legale.htm
@@ -67,7 +67,7 @@ COPYRIGHT & TRADEMARK
 
 <br><br><br>
 
-<center><a class="simple" HREF="licenza_1.htm">LICENZA D'USO</a></center>
+<center><img src="arrow_right.gif"><img src="blank.gif"><a class="line" HREF="licenza_1.htm">LICENZA D'USO</a><img src="blank.gif"><img src="arrow_left.gif"></center>
 
 </div>
 
