--- a/lab/tec/license_1.htm
+++ b/lab/tec/license_1.htm
@@ -53,7 +53,7 @@ LICENSE AGREEMENT
 
 <ul>
 
-<li>exclusive symbolic nomenclature qualifying the days of the week: Moonday, Atomday, Waterday, Winday, Fireday, Earthday, Sunday; the years within a septennium: Year of the Moon, Year of the Atom, Year of Water, Year of Wind, Year of Fire, Year of Earth, Year of the Sun; and the septennia within an epta-septennium: Septennium of the Moon, Septennium of the Atom, Septennium of Water, Septennium of Wind, Septennium of Fire, Septennium of Earth, Septennium of the Sun.
+<li>exclusive symbolic nomenclature qualifying the days of the week: Moonday, Atomday, Waterday, Winday, Fireday, Earthday, Sunday; the years within a septennium: Year of the Moon, Year of the Atom, Year of the Water, Year of the Wind, Year of the Fire, Year of the Earth, Year of the Sun; and the septennia within an epta-septennium: Septennium of the Moon, Septennium of the Atom, Septennium of the Water, Septennium of the Wind, Septennium of the Fire, Septennium of the Earth, Septennium of the Sun.
 
 <br><br>
 
@@ -75,7 +75,7 @@ LICENSE AGREEMENT
 
 <br>
 
-<font color="#82750f"><i><b>The Earth Calendar</b></i></font> is granted for free personal, commercial, educational, and artistic use, on any medium—paper, software, hardware, blockchain, AI, VR, metaverse, etc.—provided that:
+<font color="#82750f"><i><b>The Earth Calendar</b></i></font>, the calendrical system characterized as above, is granted for free personal, commercial, educational, and artistic use, on any medium—paper, software, hardware, blockchain, AI, VR, metaverse, etc.—provided that:
 
 <br>
 
@@ -95,7 +95,7 @@ Translations, cultural adaptations, custom graphics, and additional local holida
 
 <br><br>
 
-This license is global and irrevocable. Laboratorio Eudemonia retains exclusive ownership of <a class="simple" HREF="legal.htm">trademarks and logos</a>.
+The <i>Laboratorio Eudemonia</i> retains exclusive ownership of <a class="simple" HREF="legal.htm">trademarks and logos</a>. This license is global and irrevocable.
 
 <br><br><br>
 
