--- a/lab/tec/licenza_1.htm
+++ b/lab/tec/licenza_1.htm
@@ -54,7 +54,7 @@ LICENZA D’USO
 <ul>
 
 <li>
-una esclusiva nomenclatura simbolica che qualifica i giorni della settimana: Lunadì, Atomdì, Acquadì, Ventodì, Fuocodì, Terradì, Soledì, gli anni in un settennio: Anno della Luna, Anno dell'Atomo, Anno dell'Acqua, Anno del Vento, Anno del Fuoco, Anno della Terra, Anno del Sole, ed i settenni in un epta-settennio: Settennio della Luna, Settennio dell'Atomo, Settennio dell'Acqua, Settennio del Vento, Settennio del Fuoco, Settennio della Terra, Settennio del Sole.
+una esclusiva nomenclatura simbolica che qualifica i giorni della settimana: Lunadì, Atomdì, Acquadì, Ventodì, Fuocodì, Terradì, Soledì; gli anni in un settennio: Anno della Luna, Anno dell'Atomo, Anno dell'Acqua, Anno del Vento, Anno del Fuoco, Anno della Terra, Anno del Sole; ed i settenni in un epta-settennio: Settennio della Luna, Settennio dell'Atomo, Settennio dell'Acqua, Settennio del Vento, Settennio del Fuoco, Settennio della Terra, Settennio del Sole.
 
 <br><br>
 
@@ -80,7 +80,7 @@ la celebrazione di eventi planetari: Equinozi, Solstizi, mezze stagioni.
 
 <br>
 
-<font color="#82750f"><i><b>Il Calendario della Terra</b></i></font> è concesso in libero uso gratuito personale, commerciale, educativo, artistico, su qualsiasi supporto, carta, software, hardware, blockchain, AI, VR, metaverso, ecc. a condizione che:
+<font color="#82750f"><i><b>Il Calendario della Terra</b></i></font>, questo sistema calendariale caratterizzato come sopra, è concesso in libero uso gratuito personale, commerciale, educativo, artistico, su qualsiasi supporto, carta, software, hardware, blockchain, AI, VR, metaverso, ecc. a condizione che:
 
 <br>
 
@@ -92,7 +92,7 @@ sia riportata la seguente attribuzione visibile: "Basato su <i>Il Calendario del
 <br><br>
 
 <li>
-sia mantenuta la nomenclatura simbolica dei giorni, degli anni e dei settenni ed il conteggio a partire dall'anno zero, il 1969, quindi la sua sincronia con l'<i>Epoch Time</i>.
+sia mantenuta la nomenclatura dei giorni, degli anni e dei settenni ed il conteggio a partire dall'anno zero, il 1969, quindi la sua sincronia con l'<i>Epoch Time</i>.
 
 </ul>
 
@@ -102,11 +102,11 @@ Traduzioni, adattamenti culturali, grafica personalizzata e festività locali ag
 
 <br><br>
 
-Questa licenza è globale ed irrevocabile. Il <i>Laboratorio Eudemonia</i> mantiene la titolarità esclusiva dei <a class="simple" HREF="legale.htm">marchi e loghi</a>.
+Il <i>Laboratorio Eudemonia</i> mantiene la titolarità esclusiva dei <a class="simple" HREF="legale.htm">marchi e loghi</a>. Questa licenza è globale ed irrevocabile.
 
 <br><br><br>
 
-<center><i>licenza rilasciata oggi, Lunadì 12, Primo mese, Anno 57, dell'Atomo</i></center>
+<center><i>licenza rilasciata oggi, Lunadì 12, primo mese, Anno 57, dell'Atomo</i></center>
 
 </div>
 
