--- a/lab/tec/publishings.htm
+++ b/lab/tec/publishings.htm
@@ -71,11 +71,11 @@ They are here immediately available on line:
 
 <FONT FACE="VERDANA" SIZE="2">
 
-<a href="ebook.pdf" title="the book in .pdf format"><img src="book_1.jpg" border="0"></a>
+<a href="ebook_2.pdf" title="the book in .pdf format"><img src="book_1.jpg" border="0"></a>
 
 <br><br>
 
-<a class="simple" href="ebook.pdf" title="the book in .pdf format">the book</a>
+<a class="simple" href="ebook_2.pdf" title="the book in .pdf format">the book</a>
 
 </FONT>
 
