--- a/lab/tec/index_it.htm
+++ b/lab/tec/index_it.htm
@@ -42,7 +42,8 @@ span.violet {font-family: verdana; font-size: 8pt; font-weight: medium; color: v
 
 <tr><td align="center" valign="bottom" width="60%" height="45%">
 
-<SCRIPT language="JavaScript" src="tec_it_1.js"></SCRIPT>
+<span style="font-size: 12px"><SCRIPT language="JavaScript" src="dt/it_tec_date.js"></SCRIPT></span>
+<span style="font-size: 12px"><SCRIPT language="JavaScript" src="dt/it_random_hp.js"></SCRIPT></span>
 
 </td></tr><tr><td align="center" valign="bottom" height="37%">
 
