--- a/lab/tec/dt/earthcal.html
+++ b/lab/tec/dt/earthcal.html
@@ -47,7 +47,7 @@ a:active {
 
 <div style="font-size: 24px;">
 
-<a href="../ebook.pdf">the e-book</a>
+<a href="../ebook_2.pdf">the e-book</a>
 <span style="margin-right: 48px;"></span> 
 <a href="../index.htm">the historic site</a>
 <span style="margin-right: 48px;"></span> 
