--- a/lab/tec/index.htm
+++ b/lab/tec/index.htm
@@ -35,8 +35,8 @@ a.tec_en_2 {font-family: verdana; font-size: 8pt; font-weight: medium; color: wh
 
 <tr><td align="center" valign="bottom" width="60%" height="45%">
 
-<span style="font-size: 12px"><SCRIPT language="JavaScript" src="dt/tec_date.js"></SCRIPT></span>
-<span style="font-size: 12px"><SCRIPT language="JavaScript" src="dt/random_hp.js"></SCRIPT></span>
+<span style="font-size: 12px"><SCRIPT language="JavaScript" src="dt/tec_date.js" charset="utf-8"></SCRIPT></span>
+<span style="font-size: 12px"><SCRIPT language="JavaScript" src="dt/random_hp.js" charset="utf-8"></SCRIPT></span>
 
 </td></tr><tr><td align="center" valign="bottom" height="37%">
 
