--- a/lab/tec/index_it.htm
+++ b/lab/tec/index_it.htm
@@ -70,11 +70,9 @@ span.violet {font-family: verdana; font-size: 8pt; font-weight: medium; color: v
 <FONT face="verdana" SIZE="1"><i>
 <a class="linkhs" HREF="legale.htm">Copyright & Trademark</a> <a class="linkhs" href="../eulab/index.htm" target="Laboratorio Eudemonia">Laboratorio Eudemonia</a>. <a class="linkhs" HREF="legale.htm">Alcuni diritti concessi</a><br>
 <a class="linkhs" HREF="storia.htm">Sito Web attivo fin dal</a> <a class="linkhs" HREF="anni.htm">28</a> - <a class="linkhs" href="../index.htm" target="HyperLinker">WebWorks di HyperLinker</a>
-</FONT>
+</i></FONT>
 
 </td><td width="100pt"></td></tr></table>
-
-</td></tr></table>
 
 </td></tr></table>
 
