--- a/lab/tec/presentacion.htm
+++ b/lab/tec/presentacion.htm
@@ -71,8 +71,8 @@ Y no es todo. Gracias a l'introducción d'una subdivisión del tiempo en settenn
 
 <hr color="#800080" size="1">
 
-<a class="linksign" HREF="index_es.htm">E L<img src="blank.gif" border="0">C A L E N D A R I O <img src="blank.gif" border="0">D E<img src="blank.gif" border="0">L A<img src="blank.gif" border="0">T I E R R A</a><br><a class="linksign" HREF="legal_es.htm">Copyright & Trademark</a> <a class="linksign" href="../eulab/index.htm" target="laboratorio">Laboratorio Eudemonia</a> - <a class="linksign" HREF="legal_es.htm">Algunas derechas concedidos</a><br>
-<a class="linksign" HREF="historia.htm">Sitio Web activo desde</a> <a class="linksign" HREF="anos.htm">28</a> - <a class="linksign" href="../index.htm" target="hyperlinker">WebWorks de HyperLinker</a>
+<a class="linksign" HREF="index_es.htm">E L<img src="blank.gif" border="0">C A L E N D A R I O <img src="blank.gif" border="0">D E<img src="blank.gif" border="0">L A<img src="blank.gif" border="0">T I E R R A</a><br><a class="linksign" HREF="legal.htm">Copyright & Trademark</a> <a class="linksign" href="../eulab/index.htm" target="laboratorio">Laboratorio Eudemonia</a> - <a class="linksign" HREF="legal.htm">Algunas derechas concedidos</a><br>
+<a class="linksign" HREF="story.htm">Sitio Web activo desde</a> <a class="linksign" HREF="years.htm">28</a> - <a class="linksign" href="../index.htm" target="hyperlinker">WebWorks de HyperLinker</a>
 
 <br><br>
 
