--- a/lab/tec/index_es.htm
+++ b/lab/tec/index_es.htm
@@ -42,8 +42,8 @@ span.violet {font-family: verdana; font-size: 8pt; font-weight: medium; color: v
 
 <tr><td align="center" valign="bottom" width="60%" height="45%">
 
-<SCRIPT language="JavaScript" src="tec_es_1.js">
-</SCRIPT>
+<span style="font-size: 12px"><SCRIPT language="JavaScript" src="dt/es_tec_date.js" charset="utf-8"></SCRIPT></span>
+<span style="font-size: 12px"><SCRIPT language="JavaScript" src="dt/es_random_hp.js" charset="utf-8"></SCRIPT></span>
 
 </td></tr><tr><td align="center" valign="bottom" height="37%">
 
@@ -55,20 +55,18 @@ span.violet {font-family: verdana; font-size: 8pt; font-weight: medium; color: v
 <td align="center" valign="middle"><a href="index_fr.htm"><img src="fr.gif" border="0" width="22pt" alt="Ediccion Española"></a></td>
 
 <td align="center" valign="middle">
-<a href="index_it.htm"><img src="it.gif" border="0" width="22pt" alt="Edizione Italiana"></td>
+<a href="index_it.htm"><img src="it.gif" border="0" width="22pt" alt="Edizione Italiana"></a></td>
 
 </tr></table>
 
 </td></tr><tr><td align="center" valign="middle" width="100%" height="18%">
 
 <FONT face="verdana" SIZE="1"><i>
-<a class="linkhs" HREF="legal_es.htm">Copyright & Trademark</a> <a class="linkhs" href="../eulab/index.htm" target="Laboratorio Eudemonia">Laboratorio Eudemonia</a>. <a class="linkhs" HREF="legal_es.htm">Algunas derechas concedidos</a><br>
-<a class="linkhs" HREF="historia.htm">Sitio Web activo desde</a> <a class="linkhs" HREF="anos.htm">28</a> - <a class="linkhs" href="../index.htm" target="HyperLinker">WebWorks de HyperLinker</a>
-</FONT>
+<a class="linkhs" HREF="legal.htm">Copyright & Trademark</a> <a class="linkhs" href="../eulab/index.htm" target="Laboratorio Eudemonia">Laboratorio Eudemonia</a>. <a class="linkhs" HREF="legal.htm">Algunas derechas concedidos</a><br>
+<a class="linkhs" HREF="story.htm">Sitio Web activo desde</a> <a class="linkhs" HREF="years.htm">28</a> - <a class="linkhs" href="../index.htm" target="HyperLinker">WebWorks de HyperLinker</a>
+</i></FONT>
 
 </td><td width="100pt"></td></tr></table>
-
-</td></tr></table>
 
 </td></tr></table>
 
