--- a/lab/tec/index_fr.htm
+++ b/lab/tec/index_fr.htm
@@ -41,7 +41,8 @@ span.violet {font-family: verdana; font-size: 8pt; font-weight: medium; color: v
 
 <tr><td align="center" valign="bottom" width="60%" height="45%">
 
-<SCRIPT language="JavaScript" src="tec_fr_1.js"></SCRIPT>
+<span style="font-size: 12px"><SCRIPT language="JavaScript" src="dt/fr_tec_date.js" charset="utf-8"></SCRIPT></span>
+<span style="font-size: 12px"><SCRIPT language="JavaScript" src="dt/fr_random_hp.js" charset="utf-8"></SCRIPT></span>
 
 </td></tr><tr><td align="center" valign="bottom" height="37%">
 
@@ -60,8 +61,8 @@ span.violet {font-family: verdana; font-size: 8pt; font-weight: medium; color: v
 </td></tr><tr><td align="center" valign="middle" width="100%" height="18%">
 
 <FONT face="verdana" SIZE="1"><i>
-<a class="linkhs" HREF="legale.htm">Copyright & Trademark</a> <a class="linkhs" href="../eulab/index.htm" target="Laboratorio Eudemonia">Laboratorio Eudemonia</a>. <a class="linkhs" HREF="legale.htm">Quelques droits concedes</a><br>
-<a class="linkhs" HREF="storia.htm">Web site active desde </a> <a class="linkhs" HREF="anni.htm">28</a> - <a class="linkhs" href="../index.htm" target="HyperLinker">WebWorks de HyperLinker</a>
+<a class="linkhs" HREF="legal.htm">Copyright & Trademark</a> <a class="linkhs" href="../eulab/index.htm" target="Laboratorio Eudemonia">Laboratorio Eudemonia</a>. <a class="linkhs" HREF="legal.htm">Quelques droits concedes</a><br>
+<a class="linkhs" HREF="story.htm">Web site active desde </a> <a class="linkhs" HREF="years.htm">28</a> - <a class="linkhs" href="../index.htm" target="HyperLinker">WebWorks de HyperLinker</a>
 </FONT>
 
 </td><td width="100pt"></td></tr></table>
