--- a/lab/tec/presentation.htm
+++ b/lab/tec/presentation.htm
@@ -73,8 +73,8 @@ Ce n'est pas tout. Avec l'introduction d'une subdivision du temp en sept ans et 
 
 <hr color="#800080" size="1">
 
-<a class="linksign" HREF="index_it.htm">L E<img src="blank.gif" border="0">C A L A N D R I E R<img src="blank.gif" border="0">D E<img src="blank.gif" border="0">L A<img src="blank.gif" border="0">T E R R E</a><br><a class="linksign" HREF="legale.htm">Copyright & Trademark</a> <a class="linksign" href="../eulab/index.htm" target="laboratorio">Laboratorio Eudemonia</a> - <a class="linksign" HREF="legale.htm">Quelques droits concédés</a><br>
-<a class="linksign" HREF="storia.htm">Sito Web active desde</a> <a class="linksign" HREF="anni.htm">28</a> - <a class="linksign" href="../index.htm" target="hyperlinker">WebWorks de HyperLinker</a>
+<a class="linksign" HREF="index.htm">L E<img src="blank.gif" border="0">C A L A N D R I E R<img src="blank.gif" border="0">D E<img src="blank.gif" border="0">L A<img src="blank.gif" border="0">T E R R E</a><br><a class="linksign" HREF="legal.htm">Copyright & Trademark</a> <a class="linksign" href="../eulab/index.htm" target="laboratorio">Laboratorio Eudemonia</a> - <a class="linksign" HREF="legal.htm">Quelques droits concédés</a><br>
+<a class="linksign" HREF="story.htm">Sito Web active desde</a> <a class="linksign" HREF="years.htm">28</a> - <a class="linksign" href="../index.htm" target="hyperlinker">WebWorks de HyperLinker</a>
 
 <br><br>
 
