--- a/lab/repubblica/1.html
+++ b/lab/repubblica/1.html
@@ -6,7 +6,7 @@
 <title>Opere d'Arte di Danilo D'Antonio</title>
 <style>
 body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:1rem;background:#fff;font-family:serif;font-size: clamp(18px, 1.2vw + 1rem, 22px)}
-.box{width:100%;max-width:60rem;text-align:left}
+.box{width:100%;max-width:70rem;text-align:left}
 h1{font-size:2.2em;margin:0 0 2rem 0}
 p{font-size:1.4em;line-height:1.5;margin:0 0 3rem 0}
 .nav{text-align:center;font-size:1.4em}
@@ -21,6 +21,8 @@ a:hover{text-decoration:underline}
   <h1>Repubblica e Democrazia.<br>Cosa sono, quali rapporti le legano?</h1>
 
   <p>Si definisce Democrazia quell’ordinamento societario in cui il Popolo si erge a Sovrano e dà vita a una Repubblica: una comproprietà nazionale costituita da codici, enti e istituzioni, da beni, proprietà e risorse, da impieghi, poteri e redditi. Un patrimonio comune, economico, giuridico, politico, da curare solidalmente e godere paritariamente. In contemporanea, se quella specifica parte di res publica lo permette: come nel caso di un giardino pubblico. O susseguendosi l’un l’altro pro tempore: come necessita in un pubblico impiego, potere, ruolo. Per mantenere la proprietà del bene in capo al Popolo.</p>
+  
+  <br>
 
   <div class="nav">
     <a href="index.html">&lt; 0</a>
@@ -29,6 +31,15 @@ a:hover{text-decoration:underline}
     <span class="spacer"></span>
     <a href="2.html">2 &gt;</a>
   </div>
+  
+  <br><br>
+  
+  <i>
+    <div class="index" style="font-size: 16px; color: #BBBBBB; text-align: center;">
+    Copyright © Danilo D'Antonio</a>, Laboratorio Eudemonia
+   </div>
+   </i>
+  
 </div>
 
 </body>
