--- a/lab/repubblica/3.html
+++ b/lab/repubblica/3.html
@@ -6,7 +6,7 @@
 <title>Opere d'Arte di Danilo D'Antonio</title>
 <style>
 body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:1rem;background:#fff;font-family:serif;font-size: clamp(18px, 1.2vw + 1rem, 22px)}
-.box{width:100%;max-width:60rem;text-align:left}
+.box{width:100%;max-width:70rem;text-align:left}
 h1{font-size:2.2em;margin:0 0 2rem 0}
 p{font-size:1.4em;line-height:1.5;margin:0 0 3rem 0}
 .nav{text-align:center;font-size:1.4em}
@@ -19,17 +19,11 @@ a:hover{text-decoration:underline}
 
 <div class="box">
 
-  <p>In sintesi: si vive in Democrazia se il Popolo gode di una Repubblica. Se è presente una Banca dei Pubblici Impieghi (nella quale chiunque possa iscriversi e prenotarsi per fornire il proprio contributo) che permetta il periodico, regolare rinnovo del personale gestente la cosa pubblica. Se questo Istituto non è vigente, tanto la "democrazia" che la "repubblica", pur dichiarate, pur sbandierate, put vantate, sono fittizie. Trattasi di forme mantenute confuse, intermedie, spurie, da coloro che, godendo di indebiti privilegi, non vogliono rinunciarvi e si servono di ogni ente e mezzo in loro possesso, in primis quelli educativi ed informativi, per mantenere il Popolo inconsapevole e succube. Ed ora approfondiamo, procediamo.</p>
-
-<!--
-
- Continua a breve con tutto il repertorio di trent'anni di lavoro ...
-
-  <div class="nav">
-<br><br><b><a href="../repita/camps/immo/prefa.html">D.P.R. 380/2001</a></b>
-  </div>
-
--->
+  <p>In sintesi: si vive in Democrazia se il Popolo gode di una Repubblica. Se è presente una Banca dei Pubblici Impieghi (nella quale chiunque possa iscriversi e prenotarsi per fornire il proprio contributo) che permetta il periodico, regolare rinnovo del personale gestente la cosa pubblica. Se questo Istituto non è vigente, tanto la "democrazia" che la "repubblica", pur dichiarate, pur sbandierate, put vantate, sono fittizie. Trattasi di forme mantenute confuse, intermedie, spurie, da coloro che, godendo di indebiti privilegi, non vogliono rinunciarvi e si servono di ogni ente e mezzo in loro possesso, in primis quelli educativi ed informativi, per mantenere il Popolo inconsapevole e succube.</p>
+  
+  <p>Ed ora approfondiamo, procediamo.</p>
+  
+  <br>
 
   <div class="nav">
     <a href="2.html">&lt; 2</a>
@@ -38,6 +32,14 @@ a:hover{text-decoration:underline}
     <span class="spacer"></span>
     <a href="index_1.html">4 &gt;</a>
   </div>
+  
+  <br><br>
+  
+  <i>
+    <div class="index" style="font-size: 16px; color: #BBBBBB; text-align: center;">
+    Copyright © Danilo D'Antonio</a>, Laboratorio Eudemonia
+   </div>
+   </i>
 
 </div>
 
