--- a/lab/repubblica/en_1.html
+++ b/lab/repubblica/en_1.html
@@ -18,17 +18,18 @@ a:hover{text-decoration:underline}
 <body>
 
 <div class="box">
+  <h1>Republic and Democracy. What are they, and what is the relationship that binds them?</h1>
 
-  <p>Democrazia è società armoniosa contrapposta al conflittuale ammasso della tirannide: impero, monarchia o che altro. Nella tirannide il Popolo è sottomesso ai pochi che detengono perennemente la centralità ed ai loro prediletti. Nella Democrazia le persone possono accedere al nucleo della cellula societaria, la Repubblica, tramite un Istituto come la Banca dei Pubblici Impieghi, che periodicamente la redistribuisce secondo competenze, idoneità e preparazione. Chiunque può svolgere vita pubblica attiva e farsi costruttore del proprio destino. La società ne guadagna godendo di un'ampia visione, arricchita da ognuno, in grado di farle cogliere le opportunità e superare gli ostacoli.</p>
+  <p>Democracy is defined as that societal order in which the People rise as the Sovereign and give life to a Republic: a national co-ownership constituted of codes, bodies, and institutions; of assets, property, and resources; of positions, powers, and revenues. A common patrimony—cultural, economic and experiential—to be cared for in solidarity and enjoyed equally. This can occur simultaneously, if that specific part of the res publica allows it: as in the case of a public garden. Or by succeeding one another pro tempore: as is necessary for a public position, power, or role. All to maintain the ownership of the asset in the hands of the People.</p>
   
   <br>
 
   <div class="nav">
-    <a href="1.html">&lt; 1</a>
+    <a href="en_index.html">&lt; 0</a>
     <span class="spacer"></span>
-    2
+    1
     <span class="spacer"></span>
-    <a href="3.html">3 &gt;</a>
+    <a href="en_2.html">2 &gt;</a>
   </div>
   
   <br><br>
