--- a/lab/repubblica/en_2.html
+++ b/lab/repubblica/en_2.html
@@ -19,16 +19,16 @@ a:hover{text-decoration:underline}
 
 <div class="box">
 
-  <p>Democrazia è società armoniosa contrapposta al conflittuale ammasso della tirannide: impero, monarchia o che altro. Nella tirannide il Popolo è sottomesso ai pochi che detengono perennemente la centralità ed ai loro prediletti. Nella Democrazia le persone possono accedere al nucleo della cellula societaria, la Repubblica, tramite un Istituto come la Banca dei Pubblici Impieghi, che periodicamente la redistribuisce secondo competenze, idoneità e preparazione. Chiunque può svolgere vita pubblica attiva e farsi costruttore del proprio destino. La società ne guadagna godendo di un'ampia visione, arricchita da ognuno, in grado di farle cogliere le opportunità e superare gli ostacoli.</p>
+  <p>Democracy is a harmonious society, standing in stark contrast to the conflicted mass of tyranny—be it empire, monarchy, or any other form. Under tyranny, the People are subjected to the few who perpetually hold central power and to their favored circles. In a Democracy, however, citizens can access the nucleus of the societal cell—the Republic—through an Institute, which we may call the Public Jobs Bank. This Institute periodically redistributes roles based on competence, suitability, and preparation, as well as collective needs. Here, anyone can lead an active public life and become the architect of their own destiny. Society thrives by embracing a broad, collective vision, enriched by every individual, enabling it to seize opportunities and overcome any obstacle.</p>
   
   <br>
 
   <div class="nav">
-    <a href="1.html">&lt; 1</a>
+    <a href="en_1.html">&lt; 1</a>
     <span class="spacer"></span>
     2
     <span class="spacer"></span>
-    <a href="3.html">3 &gt;</a>
+    <a href="en_3.html">3 &gt;</a>
   </div>
   
   <br><br>
