--- a/lab/repubblica/en_index.html
+++ b/lab/repubblica/en_index.html
@@ -37,16 +37,16 @@
 
 <div style="font-size: 42px; text-align: center; max-width: 1200px; padding: 20px;">
 
-<a class="none" href="1.html">
+<a class="none" href="en_1.html">
 
 <strong>
 
-<span style="font-size: 69px;">R E P U B B L I C A</span>
+<span style="font-size: 69px;">R E P U B L I C</span>
 
 <br><br>
 
-aperta, praticata, osmotica, vissuta<br>
-serena perché auto-risolvente
+open, free, osmotic, practiced, lived,<br>
+serene by virtue of being self-resolving
 
 </strong>
 
@@ -56,9 +56,9 @@ serena perché auto-risolvente
 
 <span style="font-size: 18px;">
 
-<a class="none" href="en_index.html">EN</a>
-<span class="spacer"></span>
 <a class="none" href="fr_index.html">FR</a>
+<span class="spacer"></span>
+<a class="none" href="index.html">IT</a>
 <span class="spacer"></span>
 <a class="none" href="sp_index.html">SP</a>
 
