--- a/lab/repubblica/en_3.html
+++ b/lab/repubblica/en_3.html
@@ -19,16 +19,18 @@ a:hover{text-decoration:underline}
 
 <div class="box">
 
-  <p>Democrazia è società armoniosa contrapposta al conflittuale ammasso della tirannide: impero, monarchia o che altro. Nella tirannide il Popolo è sottomesso ai pochi che detengono perennemente la centralità ed ai loro prediletti. Nella Democrazia le persone possono accedere al nucleo della cellula societaria, la Repubblica, tramite un Istituto come la Banca dei Pubblici Impieghi, che periodicamente la redistribuisce secondo competenze, idoneità e preparazione. Chiunque può svolgere vita pubblica attiva e farsi costruttore del proprio destino. La società ne guadagna godendo di un'ampia visione, arricchita da ognuno, in grado di farle cogliere le opportunità e superare gli ostacoli.</p>
+  <p>In summary: one lives in a Democracy if the People enjoy a Republic. If there exists a Public Jobs Bank (in which anyone can register and enlist to contribute) that enables the periodic, regular renewal of the personnel managing the public affair. If this Institute is not in force, then both "democracy" and "republic," though declared, though brandished, though vaunted, are fictitious. These are forms kept confused, intermediate, spurious, by those who, enjoying undue privileges, do not wish to renounce them and employ every agency and means at their disposal—primarily educational and informational ones—to keep the People unaware and in a state of subjugation.</p>
   
+  <p>And now, let us delve deeper and proceed ...</p>
+
   <br>
 
   <div class="nav">
-    <a href="1.html">&lt; 1</a>
+    <a href="en_2.html">&lt; 2</a>
     <span class="spacer"></span>
-    2
+    3
     <span class="spacer"></span>
-    <a href="3.html">3 &gt;</a>
+    <a href="en_index_1.html">4 &gt;</a>
   </div>
   
   <br><br>
@@ -38,7 +40,7 @@ a:hover{text-decoration:underline}
     Copyright © Danilo D'Antonio</a>, Laboratorio Eudemonia
    </div>
    </i>
-   
+
 </div>
 
 </body>
