--- a/lab/repubblica/en_index_1.html
+++ b/lab/repubblica/en_index_1.html
@@ -10,7 +10,7 @@
 <title>Opere d'Arte di Danilo D'Antonio</title>
 <style>
 body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:1rem;background:#fff;font-family:serif;font-size: clamp(18px, 1.2vw + 1rem, 22px)}
-.box{width:100%;max-width:70rem;text-align:left;padding-bottom:7rem;}
+.box{width:100%;max-width:80rem;text-align:left;padding-bottom:7rem;}
 .tit{width:100%;max-width:70rem;text-align:center;}
 h1{font-size:2em;margin:1rem 0 2rem 0;padding-top:4rem;}
 h2{font-size:1.4em;margin:1rem 0 3rem 0;padding-bottom:2rem;}
@@ -36,7 +36,7 @@ a:hover{text-decoration:underline}
 
   <p>
 
-Understanding first, in order to later reveal the true essence of a Republic, is an adventure begun more than thirty years ago. Today, it would be difficult for a human to acquire in a short time all the insights that were conquered, one by one, over this long period. But humans now have precious Digital Assistants, capable of assimilating them in seconds and explaining them in the language of their choice. Behold, therefore: the <a class="underline" href="../ars/index_it.htm" target="site_1">historic site</a>, the underlying theory—<a class="underline" href="../ars/pre_pre_index_it.htm" target="site_2">Harmonic Social Rotation</a>—a <a class="underline" href="../repita/index.htm" target="site_3">collection of subsequent writings</a>, and a synthesis of the <a class="underline" href="index_1.html" target="site_4">essential concepts</a>. After decades, indeed centuries, of "republics" hollowed of their meaning, which in reality concealed very different human organizations, may true Republics of Fulfilled Meaning finally emerge everywhere.
+Understanding first, and later reveal the true essence of a Republic, is an adventure that begsn more than thirty years ago. Today, it would be difficult for a human to acquire in a short time all the insights that were conquered, one by one, over this long period. But humans now have precious Digital Assistants, capable of assimilating them in seconds and explaining them in the language of their choice. Behold, therefore: the <a class="underline" href="../ars/index_it.htm" target="site_1">historic site</a>, the underlying theory—<a class="underline" href="../ars/pre_pre_index_it.htm" target="site_2">Harmonic Social Rotation</a>—a <a class="underline" href="../repita/index.htm" target="site_3">collection of subsequent writings</a>, and a synthesis of the <a class="underline" href="index_1.html" target="site_4">essential concepts</a>. After decades, indeed centuries, of "republics" hollowed of their meaning—which in reality concealed very different human organizations—may true Republics of Fulfilled Meaning finally emerge everywhere.
 
   </p>
 
