--- a/lab/index.html
+++ b/lab/index.html
@@ -41,7 +41,7 @@
             'repubblica-democrazia.hyperlinker.org': 'https://hyperlinker.org/repubblica/index.html',
             'republique.hyperlinker.org': 'https://hyperlinker.org/repubblica/republique.html',
             'vive-la-republique.hyperlinker.org': 'https://hyperlinker.org/repubblica/republique.html',
-            'republic.hyperlinker.org': 'https://hyperlinker.org/repubblica/republic.html',
+            'republic.hyperlinker.org': 'https://hyperlinker.org/repubblica/en_index.html',
             'convento.hyperlinker.org': 'https://hyperlinker.org/te/convento/index.html',
         };
         if (redirectMap[hostname]) {
